# final_project

LZSS_elina/: .gitignore  CMakeLists.txt  Compress.cpp  Compress.h  Decompress.cpp  Decompress.h  Stat.cpp  Stat.h  main.cpp  makefile
deflate_project/: CMakeLists.txt  deflate.c  inffast.c  inffast.h  inflate.c  main.c  trees.c  zutil.c
lzss/: .gitignore  dep.txt  sample  sample.c
lzss_project/: CMakeLists.txt  lzss.h  main.c
toBits/: CMakeLists.txt  main.cpp
toBits/text/: encode_output_len_bit.txt  encode_output_offset_bit.txt
toBits/text/sam/: decode_output.txt
